@@ -1,0 +1,3 @@
+f2721d06704ac43d89fdd25835b43598 *./tests/data/lavf/lavf.tta
+43200 ./tests/data/lavf/lavf.tta
+./tests/data/lavf/lavf.tta CRC=0x3a1da17e
